--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="10px">
         <tr>
-            <td><img src = "images/Me.jpg" width="100px" height="100px" alt="Profile picture"></td>
+            <td><img src = "images/me.jpg" width="100px" height="100px" alt="Profile picture"></td>
             <td><h1>Jaskarn Singh</h1><p>Fullstack Web Developer</p></td>
         </tr>
     </table>
